LIN-2733/LIN-4696 Add CompositeH2 and Headline#addToTitle
Change-Id: Ief888ba244284f34ea4bb3b142c6d71e84c5f6df